cmake_minimum_required(VERSION 3.0.2)
project(my_mavros_ex)

find_package(catkin REQUIRED COMPONENTS mavros_msgs roscpp sensor_msgs std_msgs)

catkin_package()

include_directories( ${catkin_INCLUDE_DIRS})

add_executable(${PROJECT_NAME} src/my_mavros_ex_node.cpp)

target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})